--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
   deploy:
     name: Deploy to EC2
     needs: build
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
