--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "tsc",
-		"start": "./dist/index.js"
+		"start": "node ./dist/index.js"
 	},
 	"author": "Arunabh Ghosh",
 	"license": "ISC",
