--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "tsc",
-		"start": "node ./dist/index.js"
+		"start": "node ./src/index.js"
 	},
 	"author": "Arunabh Ghosh",
 	"license": "ISC",
+	"type": "module",
 	"dependencies": {
-		"@types/express": "^4.17.15",
-		"@types/node": "^18.11.18",
 		"express": "^4.18.2",
-		"node": "^19.3.0",
-		"typescript": "^4.9.4"
+		"node": "^19.3.0"
 	}
 }
 
