--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   build:
     name: Build and Package
-    runs-on: ubuntu-latest
+    runs-on: linux-latest
     permissions:
       id-token: write
       contents: read
@@ -39,7 +39,7 @@ jobs:
         with:
           node-version: "16.x"
       - run: npm ci
-      - run: npm run build
+      # run: npm run build
 
       # Copy build directory to S3
       - name: Copy build to S3
@@ -50,7 +50,7 @@ jobs:
   deploy:
     name: Deploy to EC2
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: linux-latest
     permissions:
       id-token: write
       contents: read
