--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   build:
     name: Build and Package
-    runs-on: linux
+    runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
@@ -50,7 +50,7 @@ jobs:
   deploy:
     name: Deploy to EC2
     needs: build
-    runs-on: linux
+    runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
