Added AfterInstall script

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,17 +2,21 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/node-codedeploy
+    destination: /home/ec2-user/node-express-cicd
 hooks:
-  ApplicationStop:
-    - location: scripts/application_stop.sh
+  # ApplicationStop:
+  #   - location: scripts/application_stop.sh
+  #     timeout: 300
+  #     runas: ec2-user
+  # BeforeInstall:
+  #   - location: scripts/before_install.sh
+  #     timeout: 300
+  #     runas: ec2-user
+  AfterInstall:
+    - location: scripts/after_install.sh
       timeout: 300
-      runas: ec2-user
-  BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
-      runas: ec2-user
+      runas: root
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
