--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,68 +1,40 @@
-name: Build and Deploy
+name: CI/CD Pipeline
 
 on:
-  workflow_dispatch: {}
+#  workflow_dispatch: {}
+  push:
+    branches: { main }
 
 env:
-  BUCKET_NAME: "node-express-cicd-artifact"
   AWS_REGION: "ap-south-1"
   GITHUB_REF: "main"
 
 jobs:
-  build:
-    name: Build and Package
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.IAMROLE_GITHUB }}
-          role-session-name: GitHub-Actions-Deploy-Role
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
-      - name: Extract commit hash
-        shell: bash
-        run: echo "##[set-output name=commit_hash;]$(echo "$GITHUB_SHA")"
-        id: extract_hash
-
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16.x"
-      - run: npm ci
-      # run: npm run build
-
-      # Copy build directory to S3
-      - name: Copy build to S3
-        run: |
-          zip -r project.zip . -x node_modules\* .git\*
-          aws s3 cp project.zip s3://node-express-cicd-artifact/code-deploy/project.zip
-
   deploy:
     name: Deploy to EC2
-    needs: build
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
 
     steps:
-      - uses: actions/checkout@v2
-      - run: |
-          echo "Deploying branch"
-      - name: Configure AWS credentials from Test account
+      # Step 1
+      - name: Checkout to repo
+        uses: actions/checkout@v2
+
+      # Step 2
+      - name: Set AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: ${{ secrets.IAMROLE_GITHUB }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
+          
+      # Step 3
+      - name: Create Deployment
+        id: deploy            
       - run: |
-          aws deploy create-deployment --application-name node-app --deployment-group-name ec2-app --s3-location bucket=node-express-cicd-artifact,key=code-deploy/project.zip,bundleType=zip
+          echo "Deploying branch"
+      - run: |
+          aws deploy create-deployment \
+        --application-name nodejs-express-app \
+        --deployment-group-name nodejs-express-app-d1 \
+        --deployment-config-name CodeDeployDefault.OneAtATime \
+        --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
