--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
       # Step 3
       - name: Create Deployment
         id: deploy
-      - run: |
+        run: |
           aws deploy create-deployment --application-name nodejs-express-app --deployment-group-name nodejs-express-app-d1 --deployment-config-name CodeDeployDefault.OneAtATime --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
