--- a/appspec.yml
+++ b/appspec.yml
@@ -1,14 +1,14 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source: .
     destination: /home/ec2-user/node-express-cicd
     overwrite: true
 hooks:
-  # ApplicationStop:
-  #   - location: scripts/application_stop.sh
-  #     timeout: 300
-  #     runas: ec2-user
+  ApplicationStop:
+    - location: scripts/application_stop.sh
+      timeout: 900
+      runas: root
   # BeforeInstall:
   #   - location: scripts/before_install.sh
   #     timeout: 300
