--- a/appspec.yml
+++ b/appspec.yml
@@ -13,10 +13,10 @@ hooks:
   #   - location: scripts/before_install.sh
   #     timeout: 300
   #     runas: ec2-user
-  AfterInstall:
-    - location: scripts/after_install.sh
-      timeout: 900
-      runas: root
+  # AfterInstall:
+  #   - location: scripts/after_install.sh
+  #     timeout: 900
+  #     runas: root
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 900
