--- a/appspec.yml
+++ b/appspec.yml
@@ -5,18 +5,18 @@ files:
     destination: /home/ec2-user/node-express-cicd
     overwrite: true
 hooks:
-  ApplicationStop:
-    - location: scripts/application_stop.sh
-      timeout: 900
-      runas: root
+  # ApplicationStop:
+  #   - location: scripts/application_stop.sh
+  #     timeout: 900
+  #     runas: root
   # BeforeInstall:
   #   - location: scripts/before_install.sh
   #     timeout: 300
   #     runas: ec2-user
-  # AfterInstall:
-  #   - location: scripts/after_install.sh
-  #     timeout: 900
-  #     runas: root
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 900
+      runas: root
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 900
